Fixed issue #CT-545: Don't display repeat headers on mobile devices

--- a/themes/survey/fruity_twentythree/css/variations/theme_grape-rtl.css
+++ b/themes/survey/fruity_twentythree/css/variations/theme_grape-rtl.css
@@ -12029,6 +12029,10 @@ For iPads specifically : add this : (min-device-width: 768px) and (max-device-wi
   table.ls-answers td.visible-xs, table.ls-answers th.visible-xs {
     display: block !important;
   }
+  /* Don't display repeating header on mobile devices'*/
+  table.ls-answers tr.ls-heading-repeat {
+    display: none;
+  }
 }
 /* Fix for IE11 - no array question radio buttons on small screens */
 @media all and (max-width: 760px) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
